--- a/Notebook/CCNA notebook.tex
+++ b/Notebook/CCNA notebook.tex
@@ -17,6 +17,7 @@
 \listoftables
 
 \part{NETWORK FUNDAMENTALS}
+\include{ReferenceModel}
 \include{LANdesign}
 \include{WANconcepts}
 
@@ -28,6 +29,8 @@
 
 
 \part{ROUTING TECHNOLOGIES}
+\include{Router}
+\include{IPv6}
 \include{StaticRoute}
 \include{eigrp}
 \include{ospf}
@@ -35,7 +38,7 @@
 \part{WAN TECHNOLOGIES}
 \include{PPP}
 \include{GRE,eBGP}
-\include{QoS}
+\include{QoS}o
 
 \part{INFRASTRUCTURE SERVICE}
 \include{dhcp}
